--- a/package.json
+++ b/package.json
@@ -20,16 +20,22 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "three": "^0.160.0",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "three": "^0.160.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.9",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.26.9",
+    "@vxna/optimize-three-webpack-plugin": "^5.1.3",
+    "babel-loader": "^10.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "style-loader": "^3.3.3",
+    "terser-webpack-plugin": "^5.3.14",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   }
-} 
+}
