feat: Add ship change option to in-game ESC menu and player name input
- Implemented player name input on start screen
- Added ship change functionality to in-game ESC menu
- Updated ShipSelectionUI to support dynamic ship selection during gameplay
- Enhanced start screen UI with player name input and styling
- Added console logging for player name and ship selection
- Improved error handling for ship model loading

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ logs
 
 # Optional REPL history
 .node_repl_history
+/.specstory/
+
+# Ignore SpecStory derived-cursor-rules.mdc backup files
+.specstory/cursor_rules_backups/*
