--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "webpack serve --open",
     "build": "webpack --mode production",
     "dev": "webpack --mode development --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "node server.js",
+    "dev:all": "concurrently \"npm run start\" \"npm run server\""
   },
   "keywords": [
     "game",
@@ -21,7 +23,9 @@
   "license": "MIT",
   "dependencies": {
     "socket.io-client": "^4.7.2",
-    "three": "^0.160.0"
+    "three": "^0.160.0",
+    "socket.io": "^4.7.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.9",
@@ -29,6 +33,7 @@
     "@babel/preset-env": "^7.26.9",
     "@vxna/optimize-three-webpack-plugin": "^5.1.3",
     "babel-loader": "^10.0.0",
+    "concurrently": "^8.2.2",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
